--- a/html/session-test.html
+++ b/html/session-test.html
@@ -65,6 +65,7 @@
     
   </body>
   <script src="/js/vendor/jquery-2.1.1.min.js"></script>
+  <script src="/js/base64.js"></script>
   <script src="/js/jsencrypt.min.js"></script>
   <script>
 
@@ -82,7 +83,10 @@
         console.log("pub:  " + pubkey);
 
         // send the public key to the server
-        var sdata = { 'puk': pubkey };
+        var sdata = { 'puk': Base64.encode(pubkey) };
+
+        console.log("sdata.puk: " + sdata.puk);
+
         $.post('http://localhost/api/1/session', sdata)
             .done(function(response){
                 console.log("success: " + response);
