Saved local copies of some vendor objects

--- a/html/index.html
+++ b/html/index.html
@@ -344,12 +344,13 @@
 
     <script src="/js/vendor/jquery-2.1.1.min.js"></script>
     <script src="/js/vendor/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script>
+    <script src="/js/vendor/feather.min.js"></script>
     <script src="/js/vendor/jsencrypt.min.js"></script>
     <script src="/js/vendor/base64.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/crypto-js.min.js"></script>
+    <script src="/js/vendor/crypto-js.min.js"></script>
+
     <script src="/js/dashboard.js"></script>
-    <script src="/js/sessions.js"></script>
+    <script src="/js/pit-api.js"></script>
     <script src="/js/packs.js"></script>
     <script src="/js/orgs.js"></script>
 
