Cleaning up the login process

--- a/html/index.html
+++ b/html/index.html
@@ -74,6 +74,10 @@
 				<input type="password" class="form-control" id="frm-signup-pass1" name="password" placeholder="Password">
 				<label for="floatingPassword">Password</label>
 			</div>
+			<div class="form-floating">
+				<input type="password" class="form-control" id="frm-signup-pass2" name="verify" placeholder="Password">
+				<label for="floatingPassword">Verify Password</label>
+			</div>
 			<div class="checkbox mb-3">
 				<label>
 					<input type="checkbox" value="remember-me"> Remember me
@@ -81,20 +85,6 @@
 			</div>
 			<button id="but-signup" class="w-100 btn btn-lg btn-primary" type="button">Create Account</button><br>
 			or <a href="#" id="but-signup-cancel">Cancel</a>
-		</form>
-	</div>
-	<div class="form-signup-verify">
-		<form id="frm-signup-verify">
-			<h1 class="h3 mb-3 fw-normal">Hello!!</h1>
-            <p>Please enter your password again, to ensure it is correct.</p>
-            <p>Note that a failed password cannot be recovered</p>
-
-			<div class="form-floating">
-				<input type="password" class="form-control" id="frm-signup-pass2" name="password" placeholder="Password">
-				<label for="floatingPassword">Password</label>
-			</div>
-			<button id="but-signup-verify" class="w-100 btn btn-lg btn-primary" type="button">Create Account</button><br>
-			or <a href="#" id="but-signup-verify-cancel">Cancel</a>
 		</form>
 	</div>
 </div> <!-- intro -->
@@ -119,83 +109,21 @@
   <div class="row">
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
       <div class="position-sticky pt-3">
-        <ul class="nav flex-column">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
-              <span data-feather="home"></span>
-              Vault
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="layers"></span>
-              PKI
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="users"></span>
-              People
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="play"></span>
-              Actions
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="message-circle"></span>
-              Notifications
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="settings"></span>
-              Settings
-            </a>
-          </li>
-        </ul>
 
         <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
           <span>Organisations</span>
-          <a class="link-secondary" href="#" aria-label="Add an Organisation">
+          <a class="link-secondary" id="but-add-org" href="#" aria-label="Add an Organisation">
             <span data-feather="plus-circle"></span>
           </a>
         </h6>
-        <ul class="nav flex-column mb-2">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="package"></span>
-              Current User
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="package"></span>
-              Non-Production
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="package"></span>
-              Production
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <span data-feather="package"></span>
-              Happy Birthday
-            </a>
-          </li>
+        <ul class="nav flex-column mb-2" id="orglist">
         </ul>
       </div>
     </nav>
 
     <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Dashboard</h1>
+        <h1 id="dash-org-title" class="h2">Dashboard</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group me-2">
             <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
@@ -349,7 +277,6 @@
     <script src="/js/vendor/base64.js"></script>
     <script src="/js/vendor/crypto-js.min.js"></script>
 
-    <script src="/js/pit-api.js"></script>
     <script src="/js/packs.js"></script>
     <script src="/js/orgs.js"></script>
     <script src="/js/dashboard.js"></script>
