Initial start of seperating the events structure.

--- a/html/index.html
+++ b/html/index.html
@@ -285,6 +285,7 @@
     <script src="/js/packs.js"></script>
     <script src="/js/orgs.js"></script>
     <script src="/js/dashboard.js"></script>
+    <script src="/js/events.js"></script>
 
   </body>
 </html>
