--- a/html/index.html
+++ b/html/index.html
@@ -27,10 +27,11 @@
     </style>
 
 
-    <link href="/css/dashboard.css"       rel="stylesheet">
+    <link href="/css/dashboard.css" rel="stylesheet">
+    <link href="/css/entries.css"   rel="stylesheet">
   </head>
   <body>
-    
+
 
 <!-- animated loading overlay -->
 <div class="loader"></div>
@@ -127,146 +128,67 @@
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="btn-group me-2">
             <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-            <button type="button" class="btn btn-sm btn-outline-secondary">Settings</button>
+            <button type="button" class="btn btn-sm btn-outline-secondary">
+              <span data-feather="users"></span>
+              Members
+			</button>
+            <button type="button" class="btn btn-sm btn-outline-secondary" id="but-settings">
+              <span data-feather="settings"></span>
+              Settings
+            </button>
           </div>
           <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
             <span data-feather="calendar"></span>
-            This week
+            History
           </button>
         </div>
       </div>
 
-      <h2 id="sect-title">Organisation</h2>
 
+      <div id="main_settings">
+        <h3>Settings</h3>
+		<form id="frm-settings">
 
+			<div class="form-floating">
+				<input type="name" class="form-control" id="frm-settings-name" name="name" placeholder="Name">
+				<label for="floatingInput">Name</label>
+			</div>
 
-      <div class="table-responsive">
-        <table class="table table-striped table-sm">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>Header</th>
-              <th>Header</th>
-              <th>Header</th>
-              <th>Header</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>1,001</td>
-              <td>random</td>
-              <td>data</td>
-              <td>placeholder</td>
-              <td>text</td>
-            </tr>
-            <tr>
-              <td>1,002</td>
-              <td>placeholder</td>
-              <td>irrelevant</td>
-              <td>visual</td>
-              <td>layout</td>
-            </tr>
-            <tr>
-              <td>1,003</td>
-              <td>data</td>
-              <td>rich</td>
-              <td>dashboard</td>
-              <td>tabular</td>
-            </tr>
-            <tr>
-              <td>1,003</td>
-              <td>information</td>
-              <td>placeholder</td>
-              <td>illustrative</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,004</td>
-              <td>text</td>
-              <td>random</td>
-              <td>layout</td>
-              <td>dashboard</td>
-            </tr>
-            <tr>
-              <td>1,005</td>
-              <td>dashboard</td>
-              <td>irrelevant</td>
-              <td>text</td>
-              <td>placeholder</td>
-            </tr>
-            <tr>
-              <td>1,006</td>
-              <td>dashboard</td>
-              <td>illustrative</td>
-              <td>rich</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,007</td>
-              <td>placeholder</td>
-              <td>tabular</td>
-              <td>information</td>
-              <td>irrelevant</td>
-            </tr>
-            <tr>
-              <td>1,008</td>
-              <td>random</td>
-              <td>data</td>
-              <td>placeholder</td>
-              <td>text</td>
-            </tr>
-            <tr>
-              <td>1,009</td>
-              <td>placeholder</td>
-              <td>irrelevant</td>
-              <td>visual</td>
-              <td>layout</td>
-            </tr>
-            <tr>
-              <td>1,010</td>
-              <td>data</td>
-              <td>rich</td>
-              <td>dashboard</td>
-              <td>tabular</td>
-            </tr>
-            <tr>
-              <td>1,011</td>
-              <td>information</td>
-              <td>placeholder</td>
-              <td>illustrative</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,012</td>
-              <td>text</td>
-              <td>placeholder</td>
-              <td>layout</td>
-              <td>dashboard</td>
-            </tr>
-            <tr>
-              <td>1,013</td>
-              <td>dashboard</td>
-              <td>irrelevant</td>
-              <td>text</td>
-              <td>visual</td>
-            </tr>
-            <tr>
-              <td>1,014</td>
-              <td>dashboard</td>
-              <td>illustrative</td>
-              <td>rich</td>
-              <td>data</td>
-            </tr>
-            <tr>
-              <td>1,015</td>
-              <td>random</td>
-              <td>tabular</td>
-              <td>information</td>
-              <td>text</td>
-            </tr>
-          </tbody>
-        </table>
+			<hr />
+			<button id="but-settings-save" class="w-100 btn btn-lg btn-primary" type="button">Save</button><br>
+			or <a href="#" id="but-settings-cancel">Cancel</a>
+		</form>
+
       </div>
+
+	  <div id="main_dash">
+
+
+			<ul id="myUL">
+			<li><span class="caret">Beverages</span>
+				<ul class="nested">
+				<li class="iso">Water</li>
+				<li class="iso">Coffee</li>
+				<li><span class="caret">Tea</span>
+					<ul class="nested">
+					<li class="iso">Black Tea</li>
+					<li class="iso">White Tea</li>
+					<li><span class="caret">Green Tea</span>
+						<ul class="nested">
+						<li class="iso">Sencha</li>
+						<li class="iso">Gyokuro</li>
+						<li class="iso">Matcha</li>
+						<li class="iso">Pi Lo Chun</li>
+						</ul>
+					</li>
+					</ul>
+				</li>
+				</ul>
+			</li>
+			</ul>
+
+
+	  </div>
     </main>
   </div>
 </div>
